# An-inertial-navigation-Design

./: CMakeCache.txt  CMakeLists.txt  ECEF.h  ECEF_readme  LSM9DS1.h  Makefile  README.md  cmake_install.cmake  inertial_nav.pro  install_manifest.txt  liblsm9ds1.so.2  main.cpp  mainwindow.cpp  mainwindow.h  navigation_info.cpp  update_trigger.h
example/: CMakeCache.txt  LSM9DS1_demo  LSM9DS1_demo.cpp  Makefile  cmake_install.cmake
images/: images_rc.qrc  img.qrc
imu/: CMakeLists.txt
imu/Qt/inc/QtCore/: qconfig.h
imu/Qt/inc/QtGui/: qtgui-config.h
imu/buildnew/: CMakeCache.txt  Makefile  cmake_install.cmake  liblsm9ds1.so.2
imu/src/: NED.cpp  NED.h  command.cpp  main.cpp  pigpionew.cpp  pigpionew.h
inc/: LSM9DS1.h
src/: ECEF.cpp  ECEF.h  Innertial.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navigation_info.cpp  navigation_info.h  unit_test.h  update_trigger.cpp  update_trigger.h
